# resumemo

./: .dockerignore  .gitignore  AGENTS.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  turbo.json
.github/: README.md
.github/workflows/: cd-pipeline.yml  cd-server.yml  cd-webfront.yml
api/: .gitignore  Dockerfile  drizzle.config.ts  index.ts  package.json  tsconfig.json
api/drizzle/: 0000_lucky_human_cannonball.sql  0001_profiling_v3_foundation.sql
api/src/: index.ts
backend/: .gitignore  auth-schema.ts  package.json  tsconfig.json
backend/src/: index.ts
core/: package.json  tsconfig.json
deploy/: .gitignore
deploy/ec2/: bootstrap.sh  deploy-pipeline.sh  deploy.sh
deploy/nginx/: api.cloudflare-origin.conf.example  api.conf
docs/: README.md  architecture-structure.md  codebase-operations.md  ml-pipeline-architecture.md  pipeline-spec.md  system-guidelines.md
docs/archive/: README.md  new-job-deprecated.tsx
frontend/: biome.json  middleware.ts  next.config.ts  package.json  proxy.ts  tsconfig.json
frontend-next/: .gitignore  IMPORTANT.md  next.config.ts  package.json  tsconfig.json
frontend-next/app/: globals.css  layout.tsx
frontend-next/components/: auth-provider.tsx  footer.tsx  sidebar.tsx  tlg.tsx
services/: .gitignore  package.json
services/pipeline/: Dockerfile  celeryconfig.py  config.py  models.py  package.json  pyproject.toml  worker.py
services/pipeline/pipeline/: callback.py  config.py  extract.py  models.py  parse.py  score.py  storage.py  summarize.py
services/pipeline/pipeline/stages/: parse.py  score.py
services/pipeline/pipeline/utils/: callback.py
services/pipeline/stages/: extract.py  parse.py  score.py  summarize.py
services/pipeline/tests/: README.md  test_parse.py  test_score.py  test_semantic_backend.py
services/pipeline/utils/: callback.py  storage.py
web/: .gitignore  index.html  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts  wrangler.jsonc
(+273 files in other folders)
